# gfxe

./: .gitignore  CMakeLists.txt
src/lib/: CMakeLists.txt  buffer.cpp  buffer.h  framebuffer.cpp  framebuffer.h  shader.cpp  shader.h  texture.cpp  texture.h
src/lib/glad/: glad.c
src/test/: CMakeLists.txt  log.cpp  log.h  main.cpp  window.cpp  window.h
